<resources>
    <string name="app_name">Notepad</string>
    <string name="login">登录</string>
    <string name="signin">注册</string>
    <string name="input_username">此处请输入账户</string>
    <string name="input_password">此处请输入密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="input_tel">请输入联系方式</string>
    <string name="back">返回</string>
    <string name="tel">联系电话</string>
    <string name="remrember_name">记住用户名</string>
    <string name="reset">重置</string>

    <string name="test">测试</string>

    <string name="main">主页</string>
    <string name="info">个人信息</string>
    <string name="weather">天气</string>
    <string name="add">添加事件</string>
    <string name="message">消息</string>

    <string name="theme">主题</string>
    <string name="inputText">请输入事件内容</string>
    <string name="input">请输入</string>
    <string name="text">正文</string>

    <string name="orderTime">预定时间</string>
    <string name="remindTime">提醒时间</string>
    <string name="sure">确定</string>
    <string name="exit">退出</string>

    <string name="send">发送</string>
    <string name="cancel">取消</string>
    <string name="notice">友情提示：本app每台客户端仅可注册一次 请妥善保管好您的密码账号</string>
    <string name="notice_login">如未注册请点击注册，已注册的客户端将无法注册\n疑问请点击右上角按钮</string>
    <string name="sendText">请输入发送内容</string>
    <string name="sendMessage">发送短信</string>
    <string name="inputTelephene">请输入联系人</string>
    <string name="inputTelephoneNum">请输入联系人电话号码</string>
    <string name="AddTelephone">添加联系人</string>
    <string name="send_personInfo">发送个人名片</string>
    <string name="thing">事件</string>

</resources>
