<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main"
            android:icon="@mipmap/main"
            android:title="@string/main"/>
        <item
            android:id="@+id/info"
            android:icon="@mipmap/info"
            android:title="@string/info"/>
        <item
            android:id="@+id/weather"
            android:icon="@mipmap/weather"
            android:title="@string/weather"/>
        <item
            android:id="@+id/message"
            android:icon="@mipmap/meaage"
            android:title="@string/message"/>
        <item
            android:id="@+id/add"
            android:icon="@mipmap/add"
            android:title="@string/add"/>
    </group>
</menu>