<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_height="match_parent">
    <TextView
        android:layout_marginHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/sendMessage"
        android:background="@android:color/holo_blue_light"
        android:textSize="18sp" />

    <EditText
        android:theme="@style/MyEditText"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/inputTelephene" />
    <View
        android:layout_marginHorizontal="5dp"
        android:background="#bfbfbf"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>
    <EditText
        android:theme="@style/MyEditText"
        android:gravity="top"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/white"
        android:hint="@string/sendText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <Button
            android:layout_margin="5dp"
            android:background="@android:color/holo_blue_light"
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="#D1D1D1">
        </View>

        <Button
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:id="@+id/btn_comfirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sure" />
    </LinearLayout>

</LinearLayout>