<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignInActivity">


      <TextView
          android:background="@android:color/holo_blue_light"
          android:id="@+id/text"
          android:textStyle="bold"
          android:textSize="30sp"
          android:textColor="@android:color/white"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="微记事"
          android:gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:theme="@style/MyEditText"
        android:layout_below="@id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txinput_username">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"
            android:hint="@string/input_username" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:theme="@style/MyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txinput_password"
        android:layout_below="@id/txinput_username">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:inputType="numberPassword"
            android:hint="@string/input_password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:theme="@style/MyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txinput_password_2"
        android:layout_below="@id/txinput_password">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password_2"
            android:inputType="numberPassword"
            android:hint="@string/input_password_again" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:theme="@style/MyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txinput_tel"
        android:layout_below="@id/txinput_password_2">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_tel"
            android:hint="@string/input_tel" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_below="@id/txinput_tel"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_margin="5dp"
            android:background="@drawable/buttonstyle"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/signin_btn"
            android:text="@string/signin"/>
        <Button
            android:layout_margin="5dp"
            android:background="@drawable/buttonstyle"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:id="@+id/reset_btn"/>
    </LinearLayout>
    <TextView
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/linearlayout"
        android:textSize="15sp"
        android:textColor="#bfbfbf"
        android:text="@string/notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
