<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.NoBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LogInActivity">
    <TextView
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="微记事"
        android:textStyle="bold"
        android:id="@+id/login_text"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_above="@id/et_username"
        android:layout_margin="30dp"
        android:padding="10dp"/>

        <EditText
            android:theme="@style/MyEditText"
            android:layout_above="@id/et_password"
            android:textColorHint="#bfbfbf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"
            android:hint="@string/input_username" />


        <EditText
            android:theme="@style/MyEditText"
            android:layout_above="@id/linearlayout_checkbox"
            android:textColorHint="#bfbfbf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:inputType="numberPassword"
            android:hint="@string/input_password" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearlayout_btn"
        android:id="@+id/linearlayout_checkbox"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remember_pass"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/remrember_name"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_btn"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_margin="5dp"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:id="@+id/login_btn"
            android:text="@string/login"/>
        <Button
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/signin"
            android:id="@+id/sigin_btn"/>
    </LinearLayout>
</RelativeLayout>